fix: horizontal scroll

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -12,8 +12,6 @@ body {
   margin: 0;
   font-family: Roboto, sans-serif;
   font-weight: 400;
-  min-width: 320px;
-  overflow-x: hidden;
   font-size: 16px;
   line-height: 26px;
   color: $blue-color;
