--- a/app/scss/components/_features.scss
+++ b/app/scss/components/_features.scss
@@ -11,6 +11,10 @@
     margin-bottom: 30px;
   }
 
+  &__container {
+    padding: 0 20px;
+  }
+
   &__items {
     display: flex;
     flex-wrap: wrap;
